<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#000000"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_in2out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_in2out"
            android:textSize="16sp"/>

        <View
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:background="#000000"/>

        <Button
            android:id="@+id/btn_out2in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_out2in"
            android:textSize="16sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#000000"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_in"
            android:textSize="16sp"/>

        <View
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:background="#000000"/>

        <Button
            android:id="@+id/btn_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_out"
            android:textSize="16sp"/>

        <View
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:background="#000000"/>

        <Button
            android:id="@+id/btn_round"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_round"
            android:textSize="16sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#000000"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sensor_value_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sensor_value_txt"
            android:textSize="22sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/time_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@android:color/holo_red_dark"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#000000"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/magnet_x_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/magnet_x_txt"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/magnet_x_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/magnet_y_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/magnet_y_txt"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/magnet_y_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/magnet_z_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/magnet_z_txt"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/magnet_z_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#000000"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/accel_x_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accel_x_txt"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/accel_x_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/accel_y_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accel_y_txt"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/accel_y_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/accel_z_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accel_z_txt"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/accel_z_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#000000"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/orient_x_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orient_x_txt"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/orient_x_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/orient_y_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orient_y_txt"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/orient_y_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/orient_z_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orient_z_txt"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/orient_z_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#000000"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/gyro_x_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gyro_x_txt"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/gyro_x_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/gyro_y_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gyro_y_txt"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/gyro_y_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/gyro_z_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gyro_z_txt"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/gyro_z_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#000000"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/press_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/press_txt"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/press_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#000000"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/file_num_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/file_num_txt"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/edit_file_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="9.5"
            android:hint="@string/file_num_hint"
            android:textSize="16sp"
            android:inputType="number"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#000000"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_start"
            android:textSize="16sp"/>

        <View
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:background="#000000"/>

        <Button
            android:id="@+id/btn_stop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_stop"
            android:textSize="16sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#000000"/>

</LinearLayout>